--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <!-- bootstrap-react css stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     
+    <script src="https://unpkg.com/react-select/dist/react-select.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
